--- a/index.html
+++ b/index.html
@@ -11,3 +11,8 @@
 <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
+
+<!-- map() array of object to array of strings of html text
+
+
+object object comes when browser tries to display array of objects as string of text-->
